--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Dynamic Address Form</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar">
-    <ul>
-      <li><a href="#section1">Home</a></li>
-      <li><a href="#section2">Address Form</a></li>
-    </ul>
-  </nav>
 
-  <section id="section1" class="section">
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Address Form</a>
+    </nav>
+  </header>
+
+  <div class="container">
     <h1>Welcome to Our Form Page</h1>
     <p>This is the introductory section with some content.</p>
-  </section>
 
-  <section id="section2" class="section">
     <h2>Dynamic Address Form</h2>
-    <form id="address-form">
-      <label for="country">Country:</label>
-      <select id="country">
-        <option value="">Select Country</option>
-      </select>
 
-      <label for="state">State:</label>
-      <select id="state">
-        <option value="">Select State</option>
-      </select>
-
-      <label for="city">City:</label>
-      <select id="city">
-        <option value="">Select City</option>
-      </select>
+    <form>
+      <div class="form-group">
+        <label for="country">Country:</label>
+        <select id="country"><option>Select Country</option></select>
+      </div>
+      <div class="form-group">
+        <label for="state">State:</label>
+        <select id="state"><option>Select State</option></select>
+      </div>
+      <div class="form-group">
+        <label for="city">City:</label>
+        <select id="city"><option>Select City</option></select>
+      </div>
     </form>
-  </section>
+  </div>
 
-  <script src="script.js"></script>
+  <footer>
+    &copy; 2025 Dynamic Form Project
+  </footer>
+
 </body>
 </html>
